# dodge-the-bevy

./: Cargo.toml  Howto.md  Howto1_Player.md  Howto_1_Player.md  Howto_2_Enemy.md  Howto_3_collision.md  Howto_4_UI.md  Howto_5_finish_up.md  README.md
assets/shaders/: background.wgsl
src/: background.rs  camera.rs  character.rs  collision.rs  enemy.rs  lib.rs  main.rs  player.rs  restart_label.rs  restart_panel.rs  score_label.rs  scorelabel.rs
