[package]
name = "dodge-the-bevy"
version = "0.1.0"
edition = "2021"
authors = ["Narazaki Shuji <shujinarazaki@protonmail.com>"]
description = "A simple game in Rust with Bevy"
readme = "README.md"
repository = "https://github.com/shnarazk/dodge-the-bevy"
homepage = "https://github.com/shnarazk/dodge-the-bevy"
keywords = ["game", "bevy"]
categories = ["games"]

[dependencies]
bevy =  { git = "https://github.com/bevyengine/bevy" }
rand = "0.7"
